# Rust-vuln-detector-ML-and-Static-Analysis

./: Cargo.toml  Cargo.tomly  README.md  dataset.csv  generate_ir_final.sh  security_report.csv
dataset/: metadata.csv
dataset/safe/: safe_snippet_8.rs
dataset/unsafe/: unsafe_snippet_9.rs
ir/safe/: safe_snippet_1.ll  safe_snippet_10.ll  safe_snippet_11.ll  safe_snippet_14.ll  safe_snippet_15.ll  safe_snippet_18.ll  safe_snippet_20.ll  safe_snippet_21.ll  safe_snippet_24.ll  safe_snippet_25.ll  safe_snippet_28.ll  safe_snippet_3.ll  safe_snippet_30.ll  safe_snippet_31.ll  safe_snippet_34.ll  safe_snippet_35.ll  safe_snippet_40.ll  safe_snippet_41.ll  safe_snippet_44.ll  safe_snippet_45.ll  safe_snippet_49.ll  safe_snippet_5.ll  safe_snippet_50.ll  safe_snippet_51.ll  safe_snippet_7.ll
src/: data_loader.rs  feature_extractor.rs  main.rs  ml.rs  static_analysis.rs  vuln_detector.rs  vulnerability_detectors.rs
src/analysis/: mod.rs
