[package]
name = "rust-vuln-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
csv = "1.3.0"
linfa = "0.6.1"
linfa-logistic = "0.6.1"
linfa-trees = "0.6.1"
ndarray = "0.15.6"
regex = "1.10.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
syn = { version = "2.0.72", features = ["full", "visit"] }
quote = "1.0.36"
tempfile = "3.10.1"
walkdir = "2.5.0"
